@@ -12,6 +12,14 @@
       />
 
   <browser:page
+      for="plone.app.collection.interfaces.ICollection"
+      name="activity"
+      class=".activity.CollectionActivityView"
+      permission="zope2.View"
+      allowed_attributes="fetch raw"
+      />
+
+  <browser:page
       for="*"
       name="tabbedview_view-activity"
       class=".tab.ActivityTab"
