@@ -10,6 +10,7 @@
   <i18n:registerTranslations directory="locales" />
 
   <include package=".browser" />
+  <include package=".upgrades" />
 
   <browser:resourceDirectory
       name="ftw.activity"
