@@ -1,0 +1,18 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
+    i18n_domain="ftw.activity">
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <!-- 1000 => 1001 -->
+    <upgrade-step:importProfile
+        title="Register activity view for collections."
+        profile="ftw.activity:default"
+        source="1000"
+        destination="1001"
+        directory="profiles/1001"
+        />
+
+</configure>
