@@ -5,10 +5,11 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add support for collections.
+  [jone]
 
 
 1.0.0 (2014-09-03)
 ------------------
 
-- Nothing changed yet.
+- Initial implementation.
